force-app/main/default/objects/Change_Request_PMT__c/fields/Analysis_PMT__c.field-meta.xml
<CustomField>
    <fullName>Analysis_PMT__c</fullName>
    <label>Analysis(In hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>