force-app/main/default/objects/Change_Request_PMT__c/fields/Business_Justification_PMT__c.field-meta.xml
<CustomField>
    <fullName>Business_Justification_PMT__c</fullName>
    <label>Business Justification</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>