force-app/main/default/objects/Change_Request_PMT__c/fields/Change_Advantage_PMT__c.field-meta.xml
<CustomField>
    <fullName>Change_Advantage_PMT__c</fullName>
    <label>Change Advantage</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>