force-app/main/default/objects/Change_Request_PMT__c/fields/Confirm_Release_PMT__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Release_PMT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Confirm Release</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Release__c.Release_Start_Date_PMT__c</field>
            <operation>greaterThan</operation>
            <valueField>$Source.CreatedDate</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Change Requests (Confirm Release)</relationshipLabel>
    <relationshipName>Change_Request</relationshipName>
    <type>Lookup</type>
</CustomField>