force-app/main/default/objects/Change_Request_PMT__c/fields/Contigency_Percentage_PMT__c.field-meta.xml
<CustomField>
    <fullName>Contigency_Percentage_PMT__c</fullName>
    <label>Contigency Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>