force-app/main/default/objects/Change_Request_PMT__c/fields/Created_for_PMT__c.field-meta.xml
<CustomField>
    <fullName>Created_for_PMT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created for</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Team Member and other users</value>
        </filterItems>
        <filterItems>
            <field>Contact.Status_PMT__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>Contact.Account.Status_PMT__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Change Requests</relationshipLabel>
    <relationshipName>Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>