force-app/main/default/objects/Change_Request_PMT__c/fields/Deployed_PMT__c.field-meta.xml
<CustomField>
    <fullName>Deployed_PMT__c</fullName>
    <label>Deployed(In Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>