force-app/main/default/objects/Change_Request_PMT__c/fields/Description_PMT__c.field-meta.xml
<CustomField>
    <fullName>Description_PMT__c</fullName>
    <label>Description</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>