force-app/main/default/objects/Change_Request_PMT__c/fields/Development_in_hours_PMT__c.field-meta.xml
<CustomField>
    <fullName>Development_in_hours_PMT__c</fullName>
    <label>Development(in hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>