force-app/main/default/objects/Change_Request_PMT__c/fields/mobile_PMT__c.field-meta.xml
<CustomField>
    <fullName>mobile_PMT__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>