force-app/main/default/objects/Change_Request_PMT__c/fields/Open_Date_PMT__c.field-meta.xml
<CustomField>
    <fullName>Open_Date_PMT__c</fullName>
    <label>Open Date</label>
    <type>Date</type>
</CustomField>