force-app/main/default/objects/Change_Request_PMT__c/fields/Planned_Release_PMT__c.field-meta.xml
<CustomField>
    <fullName>Planned_Release_PMT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Planned Release</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Release__c.Release_Start_Date_PMT__c</field>
            <operation>greaterOrEqual</operation>
            <valueField>$Source.Open_Date_PMT__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Change Request (Planned)</relationshipLabel>
    <relationshipName>Change_RequestPlanned</relationshipName>
    <type>Lookup</type>
</CustomField>