force-app/main/default/objects/Change_Request_PMT__c/fields/Planning_PMT__c.field-meta.xml
<CustomField>
    <fullName>Planning_PMT__c</fullName>
    <label>Planning</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>