force-app/main/default/objects/Change_Request_PMT__c/fields/Priority_PMT__c.field-meta.xml
<CustomField>
    <fullName>Priority_PMT__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Change_Request_Priority_PMT</valueSetName>
    </valueSet>
</CustomField>