force-app/main/default/objects/Change_Request_PMT__c/fields/Raised_by_PMT__c.field-meta.xml
<CustomField>
    <fullName>Raised_by_PMT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Raised by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>