force-app/main/default/objects/Change_Request_PMT__c/fields/Raised_for_PMT__c.field-meta.xml
<CustomField>
    <fullName>Raised_for_PMT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Raised for</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Change Requests (Raised for)</relationshipLabel>
    <relationshipName>Change_Request</relationshipName>
    <type>Lookup</type>
</CustomField>