force-app/main/default/objects/Change_Request_PMT__c/fields/Related_Request_PMT__c.field-meta.xml
<CustomField>
    <fullName>Related_Request_PMT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Request</label>
    <referenceTo>Change_Request_PMT__c</referenceTo>
    <relationshipLabel>Change Requests(Related Request)</relationshipLabel>
    <relationshipName>Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>