force-app/main/default/objects/Change_Request_PMT__c/fields/System_Testing_PMT__c.field-meta.xml
<CustomField>
    <fullName>System_Testing_PMT__c</fullName>
    <label>System Testing(In Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>