force-app/main/default/objects/Change_Request_PMT__c/fields/Title_PMT__c.field-meta.xml
<CustomField>
    <fullName>Title_PMT__c</fullName>
    <label>Title</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>