force-app/main/default/objects/Change_Request_PMT__c/fields/Total_Hours_PMT__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_PMT__c</fullName>
    <formula>(  Planning_PMT__c + Analysis_PMT__c + Design_in_hours_PMT__c + Development_in_hours_PMT__c + System_Testing_PMT__c + UAT_PMT__c + Deployed_PMT__c ) *  (  Contigency_Percentage_PMT__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>