force-app/main/default/objects/Change_Request_PMT__c/fields/UAT_PMT__c.field-meta.xml
<CustomField>
    <fullName>UAT_PMT__c</fullName>
    <label>UAT(In Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>