force-app/main/default/objects/Change_Request_PMT__c/fields/Update_PMT__c.field-meta.xml
<CustomField>
    <fullName>Update_PMT__c</fullName>
    <label>Update</label>
    <type>Date</type>
</CustomField>