force-app/main/default/objects/Change_Request_PMT__c/fields/Urgency_PMT__c.field-meta.xml
<CustomField>
    <fullName>Urgency_PMT__c</fullName>
    <label>Urgency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>