force-app/main/default/objects/Change_Request_PMT__c/recordTypes/main.recordType-meta.xml
<RecordType>
    <fullName>main</fullName>
    <active>true</active>
    <label>main</label>
</RecordType>