force-app/main/default/objects/Change_Request_PMT__c/validationRules/Business_Justication_should_not_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Business_Justication_should_not_be_blank</fullName>
    <active>false</active>
    <errorConditionFormula>AND(  ISBLANK( Business_Justification_PMT__c )  , ISPICKVAL( Priority_PMT__c , &quot;critical&quot;))</errorConditionFormula>
    <errorMessage>Business Justication should not be blank</errorMessage>
</ValidationRule>