force-app/main/default/objects/Change_Request_PMT__c/validationRules/Close_Date_should_not_be_in_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Date_should_not_be_in_future</fullName>
    <active>false</active>
    <errorConditionFormula>Close_Date_PMT__c  &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Close_Date_PMT__c</errorDisplayField>
    <errorMessage>Close Date should not be in future</errorMessage>
</ValidationRule>