force-app/main/default/objects/Change_Request_PMT__c/listViews/kdsfk.listView-meta.xml
<ListView>
    <fullName>kdsfk</fullName>
    <columns>NAME</columns>
    <columns>Close_Date_PMT__c</columns>
    <columns>Business_Justification_PMT__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Planned_Release_PMT__c</field>
        <operation>equals</operation>
        <value>1.0</value>
    </filters>
    <label>kdsfk</label>
</ListView>